[package]
name = "rococo-runtime"
version = "0.8.28"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.123", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
smallvec = "1.6.1"
hex-literal = "0.3.1"

fabric-support = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-api = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-io = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tetcore-std = { package = "tetcore-std", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-runtime = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-session = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-staking = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tet-core = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-version = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }

tx-pool-api = { package = "tp-transaction-pool", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
block-builder-api = { package = "tp-block-builder", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
inherents = { package = "tp-inherents", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
offchain-primitives = { package = "tp-offchain", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }

noble-authority-discovery = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-authorship = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-babe = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-sudo = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
babe-primitives = { package = "tp-consensus-babe", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-balances = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-session = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-im-online = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-indices = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-transaction-payment = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-transaction-payment-rpc-runtime-api = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-staking = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-staking-reward-curve = { package = "noble-staking-reward-curve", git = "https://github.com/tetcoin/tetcore", branch = "master" }
fabric-executive = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-grandpa = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-timestamp = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-offences = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
authority-discovery-primitives = { package = "tp-authority-discovery", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }

fabric-system = {git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
fabric-system-rpc-runtime-api = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }

runtime-common = { package = "tetcoin-runtime-common", path = "../common", default-features = false }
primitives = { package = "tetcoin-primitives", path = "../../primitives", default-features = false }
tetcoin-parachain = { path = "../../parachain", default-features = false }
runtime-parachains = { package = "tetcoin-runtime-parachains", path = "../parachains", default-features = false }

xcm = { package = "xcm", path = "../../xcm", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
xcm-builder = { package = "xcm-builder", path = "../../xcm/xcm-builder", default-features = false }

[build-dependencies]
tetcore-wasm-builder = "3.0.0"

[features]
default = ["std"]
no_std = []
std = [
	"authority-discovery-primitives/std",
	"noble-authority-discovery/std",
	"noble-authorship/std",
	"noble-babe/std",
	"babe-primitives/std",
	"noble-balances/std",
	"parity-scale-codec/std",
	"fabric-executive/std",
	"noble-grandpa/std",
	"noble-sudo/std",
	"noble-indices/std",
	"noble-im-online/std",
	"inherents/std",
	"fabric-support/std",
	"tetcoin-parachain/std",
	"primitives/std",
	"runtime-common/std",
	"runtime-parachains/std",
	"noble-session/std",
	"tp-api/std",
	"tet-core/std",
	"tp-io/std",
	"tp-runtime/std",
	"tp-session/std",
	"tp-staking/std",
	"tetcore-std/std",
	"noble-staking/std",
	"fabric-system/std",
	"fabric-system-rpc-runtime-api/std",
	"offchain-primitives/std",
	"noble-offences/std",
	"noble-timestamp/std",
	"noble-transaction-payment/std",
	"noble-transaction-payment-rpc-runtime-api/std",
	"block-builder-api/std",
	"tx-pool-api/std",
	"tp-version/std",
	"serde_derive",
	"serde/std",
	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
]
# When enabled, the runtime api will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime api exported functions
# in WASM.
disable-runtime-api = []
runtime-benchmarks = [
	"runtime-common/runtime-benchmarks",
	"fabric-support/runtime-benchmarks",
	"fabric-system/runtime-benchmarks",
	"tp-runtime/runtime-benchmarks",
	"noble-babe/runtime-benchmarks",
	"noble-balances/runtime-benchmarks",
	"noble-grandpa/runtime-benchmarks",
	"noble-im-online/runtime-benchmarks",
	"noble-indices/runtime-benchmarks",
	"noble-staking/runtime-benchmarks",
	"noble-timestamp/runtime-benchmarks",
]
