[package]
name = "rococo-runtime"
version = "0.8.28"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
tetsy-scale-codec = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.123", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
smallvec = "1.6.1"
hex-literal = "0.3.1"

fabric-support = { version = "2.0.0", default-features = false }
tp-api = { version = "2.0.2", default-features = false }
tet-io = { version = "2.0.2", default-features = false }
tetcore-std = { version = "2.0.2", default-features = false }
tp-runtime = { version = "2.0.2", default-features = false }
tp-session = { version = "2.0.2", default-features = false }
tp-staking = { version = "2.0.2", default-features = false }
tet-core = { version = "2.0.2", default-features = false }
tp-version = { version = "2.0.2", default-features = false }

tx-pool-api = { package = "tp-transaction-pool", version = "2.0.2", default-features = false }
block-builder-api = { package = "tp-block-builder", version = "2.0.2", default-features = false }
inherents = { package = "tp-inherents", version = "2.0.2", default-features = false }
offchain-primitives = { package = "tp-offchain", version = "2.0.2", default-features = false }

noble-authority-discovery = { version = "2.0.1", default-features = false }
noble-authorship = { version = "2.0.1", default-features = false }
noble-babe = { version = "2.0.1", default-features = false }
noble-sudo = { version = "2.0.0", default-features = false }
babe-primitives = { package = "tp-consensus-babe", version = "0.8.2", default-features = false }
noble-balances = { version = "2.0.1", default-features = false }
noble-session = { version = "2.0.0", default-features = false }
noble-im-online = { version = "2.0.0", default-features = false }
noble-indices = { version = "2.0.0", default-features = false }
noble-transaction-payment = { version = "2.0.0", default-features = false }
noble-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false }
noble-staking = { version = "2.0.0", default-features = false }
noble-staking-reward-curve = { package = "noble-staking-reward-curve", version = "2.0.0" }
fabric-executive = { version = "2.0.0", default-features = false }
noble-grandpa = { version = "2.0.0", default-features = false }
noble-timestamp = { version = "2.0.0", default-features = false }
noble-offences = { version = "2.0.1", default-features = false }
authority-discovery-primitives = { package = "tp-authority-discovery", version = "2.0.2", default-features = false }

fabric-system = { version = "2.0.0", default-features = false }
fabric-system-rpc-runtime-api = { version = "2.0.0", default-features = false }

runtime-common = { package = "tetcoin-runtime-common", path = "../common", default-features = false }
primitives = { version = "0.8.28", package = "tetcoin-primitives", path = "../../primitives", default-features = false }
tetcoin-parachain = { version = "0.8.28", path = "../../parachain", default-features = false }
runtime-parachains = { package = "tetcoin-runtime-parachains", path = "../parachains", default-features = false }

xcm = { package = "xcm", path = "../../xcm", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
xcm-builder = { package = "xcm-builder", path = "../../xcm/xcm-builder", default-features = false }

[build-dependencies]
wasm-builder = "3.0.0"

[features]
default = ["std"]
no_std = []
std = [
	"authority-discovery-primitives/std",
	"noble-authority-discovery/std",
	"noble-authorship/std",
	"noble-babe/std",
	"babe-primitives/std",
	"noble-balances/std",
	"tetsy-scale-codec/std",
	"fabric-executive/std",
	"noble-grandpa/std",
	"noble-sudo/std",
	"noble-indices/std",
	"noble-im-online/std",
	"inherents/std",
	"fabric-support/std",
	"tetcoin-parachain/std",
	"primitives/std",
	"runtime-common/std",
	"runtime-parachains/std",
	"noble-session/std",
	"tp-api/std",
	"tet-core/std",
	"tet-io/std",
	"tp-runtime/std",
	"tp-session/std",
	"tp-staking/std",
	"tetcore-std/std",
	"noble-staking/std",
	"fabric-system/std",
	"fabric-system-rpc-runtime-api/std",
	"offchain-primitives/std",
	"noble-offences/std",
	"noble-timestamp/std",
	"noble-transaction-payment/std",
	"noble-transaction-payment-rpc-runtime-api/std",
	"block-builder-api/std",
	"tx-pool-api/std",
	"tp-version/std",
	"serde_derive",
	"serde/std",
	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
]
# When enabled, the runtime api will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime api exported functions
# in WASM.
disable-runtime-api = []
runtime-benchmarks = [
	"runtime-common/runtime-benchmarks",
	"fabric-support/runtime-benchmarks",
	"fabric-system/runtime-benchmarks",
	"tp-runtime/runtime-benchmarks",
	"noble-babe/runtime-benchmarks",
	"noble-balances/runtime-benchmarks",
	"noble-grandpa/runtime-benchmarks",
	"noble-im-online/runtime-benchmarks",
	"noble-indices/runtime-benchmarks",
	"noble-staking/runtime-benchmarks",
	"noble-timestamp/runtime-benchmarks",
]
