[package]
name = "tetcoin-test-runtime"
version = "0.8.28"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
tetsy-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.13", optional = true }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.123", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
smallvec = "1.6.1"

authority-discovery-primitives = { package = "tp-authority-discovery", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
babe-primitives = { package = "tp-consensus-babe", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-api = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
inherents = { package = "tp-inherents", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
offchain-primitives = { package = "tp-offchain", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tetcore-std = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-io = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-runtime = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-staking = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tet-core = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-session = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-version = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tx-pool-api = { package = "tp-transaction-pool", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
block-builder-api = { package = "tp-block-builder", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }

noble-authority-discovery = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-authorship = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-babe = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-balances = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-transaction-payment = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-transaction-payment-rpc-runtime-api = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
fabric-executive = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-grandpa = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-indices = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-nicks = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-offences = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-randomness-collective-flip = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-session = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
fabric-support = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-staking = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-staking-reward-curve = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
fabric-system = {git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
fabric-system-rpc-runtime-api = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-timestamp = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-sudo = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-vesting = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }

runtime-common = { package = "tetcoin-runtime-common", path = "../common", default-features = false }
primitives = { package = "tetcoin-primitives", path = "../../primitives", default-features = false }
tetcoin-parachain = { path = "../../parachain", default-features = false }
tetcoin-runtime-parachains = { path = "../parachains", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"
libsecp256k1 = "0.3.5"
tiny-keccak = "2.0.2"
keyring = { package = "tp-keyring", git = "https://github.com/tetcoin/tetcore", branch = "master" }
tp-trie = { version = "2.0.2" }
serde_json = "1.0.61"

[build-dependencies]
tetcore-wasm-builder = "3.0.0"

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"noble-authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"tetsy-scale-codec/std",
	"inherents/std",
	"tet-core/std",
	"tetcoin-parachain/std",
	"tp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"tetcore-std/std",
	"tp-io/std",
	"fabric-support/std",
	"noble-authorship/std",
	"noble-balances/std",
	"noble-transaction-payment/std",
	"noble-transaction-payment-rpc-runtime-api/std",
	"fabric-executive/std",
	"noble-grandpa/std",
	"noble-indices/std",
	"noble-nicks/std",
	"noble-offences/std",
	"tp-runtime/std",
	"tp-staking/std",
	"noble-session/std",
	"noble-staking/std",
	"fabric-system/std",
	"fabric-system-rpc-runtime-api/std",
	"noble-timestamp/std",
	"tp-version/std",
	"noble-vesting/std",
	"serde_derive",
	"serde/std",
	"log",
	"noble-babe/std",
	"babe-primitives/std",
	"tp-session/std",
	"noble-randomness-collective-flip/std",
	"runtime-common/std",
]
