[package]
name = "tetcoin-test-runtime"
version = "0.8.28"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.22.3", default-features = false, features = ["alloc"] }
tetsy-scale-codec = { version = "2.0.1", default-features = false, features = ["derive"] }
log = { version = "0.4.13", optional = true }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.123", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
smallvec = "1.6.1"

authority-discovery-primitives = { package = "tp-authority-discovery", version = "2.0.2", default-features = false }
babe-primitives = { package = "tp-consensus-babe", version = "0.8.2", default-features = false }
tp-api = { version = "2.0.2", default-features = false }
inherents = { package = "tp-inherents", version = "2.0.2", default-features = false }
offchain-primitives = { package = "tp-offchain", version = "2.0.2", default-features = false }
tetcore-std = { version = "2.0.2", default-features = false }
tet-io = { version = "2.0.2", default-features = false, features = [ "disable_oom", "disable_panic_handler" ] }
tp-runtime = { version = "2.0.2", default-features = false }
tp-staking = { version = "2.0.2", default-features = false }
tet-core = { version = "2.0.2", default-features = false }
tp-session = { version = "2.0.2", default-features = false }
tp-version = { version = "2.0.2", default-features = false }
tx-pool-api = { package = "tp-transaction-pool", version = "2.0.2", default-features = false }
block-builder-api = { package = "tp-block-builder", version = "2.0.2", default-features = false }

noble-authority-discovery = { version = "2.0.1", default-features = false }
noble-authorship = { version = "2.0.1", default-features = false }
noble-babe = { version = "2.0.1", default-features = false }
noble-balances = { version = "2.0.1", default-features = false }
noble-transaction-payment = { version = "2.0.0", default-features = false }
noble-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false }
fabric-executive = { version = "2.0.0", default-features = false }
noble-grandpa = { version = "2.0.0", default-features = false }
noble-indices = { version = "2.0.0", default-features = false }
noble-nicks = { version = "2.0.1", default-features = false }
noble-offences = { version = "2.0.1", default-features = false }
noble-randomness-collective-flip = { version = "2.0.0", default-features = false }
noble-session = { version = "2.0.0", default-features = false }
fabric-support = { version = "2.0.0", default-features = false }
noble-staking = { version = "2.0.0", default-features = false }
noble-staking-reward-curve = { version = "2.0.0" }
fabric-system = { version = "2.0.0", default-features = false }
fabric-system-rpc-runtime-api = { version = "2.0.0", default-features = false }
noble-timestamp = { version = "2.0.0", default-features = false }
noble-sudo = { version = "2.0.0", default-features = false }
noble-vesting = { version = "2.0.0", default-features = false }

runtime-common = { package = "tetcoin-runtime-common", path = "../common", default-features = false }
primitives = { version = "0.8.28", package = "tetcoin-primitives", path = "../../primitives", default-features = false }
tetcoin-parachain = { version = "0.8.28", path = "../../parachain", default-features = false }
tetcoin-runtime-parachains = { path = "../parachains", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"
libsecp256k1 = "0.3.5"
tiny-keccak = "2.0.2"
keyring = { package = "tp-keyring", version = "2.0.2" }
tp-trie = { version = "2.0.2" }
serde_json = "1.0.61"

[build-dependencies]
wasm-builder = "3.0.0"

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"noble-authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"tetsy-scale-codec/std",
	"inherents/std",
	"tet-core/std",
	"tetcoin-parachain/std",
	"tp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"tetcore-std/std",
	"tet-io/std",
	"fabric-support/std",
	"noble-authorship/std",
	"noble-balances/std",
	"noble-transaction-payment/std",
	"noble-transaction-payment-rpc-runtime-api/std",
	"fabric-executive/std",
	"noble-grandpa/std",
	"noble-indices/std",
	"noble-nicks/std",
	"noble-offences/std",
	"tp-runtime/std",
	"tp-staking/std",
	"noble-session/std",
	"noble-staking/std",
	"fabric-system/std",
	"fabric-system-rpc-runtime-api/std",
	"noble-timestamp/std",
	"tp-version/std",
	"noble-vesting/std",
	"serde_derive",
	"serde/std",
	"log",
	"noble-babe/std",
	"babe-primitives/std",
	"tp-session/std",
	"noble-randomness-collective-flip/std",
	"runtime-common/std",
]
