[package]
name = "westend-runtime"
version = "0.8.28"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
tetsy-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.13", optional = true }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.123", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
smallvec = "1.6.1"
static_assertions = "1.1.0"

authority-discovery-primitives = { package = "tp-authority-discovery", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
babe-primitives = { package = "tp-consensus-babe", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-api = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
inherents = { package = "tp-inherents", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
offchain-primitives = { package = "tp-offchain", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tetcore-std = { version = "2.0.2", default-features = false }
tet-io = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-runtime = { version = "2.0.2", default-features = false }
tp-staking = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tet-core = { version = "2.0.2", default-features = false }
tp-session = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-version = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tx-pool-api = { package = "tp-transaction-pool", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
block-builder-api = { package = "tp-block-builder", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }

noble-authority-discovery = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-authorship = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-babe = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-balances = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-transaction-payment = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-transaction-payment-rpc-runtime-api = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-collective = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-democracy = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-elections-phragmen = { package = "noble-elections-phragmen", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
fabric-executive = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-grandpa = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-identity = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-im-online = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-indices = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-membership = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-multisig = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-nicks = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-offences = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-proxy = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-randomness-collective-flip = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-recovery = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-scheduler = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-session = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-society = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
fabric-support = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-staking = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-staking-reward-curve = { package = "noble-staking-reward-curve", git = "https://github.com/tetcoin/tetcore", branch = "master" }
noble-sudo = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
fabric-system = {git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
fabric-system-rpc-runtime-api = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-timestamp = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-treasury = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-utility = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-vesting = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }

fabric-benchmarking = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false, optional = true }
fabric-system-benchmarking = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false, optional = true }
noble-offences-benchmarking = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false, optional = true }
noble-session-benchmarking = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false, optional = true }
hex-literal = { version = "0.3.1", optional = true }

runtime-common = { package = "tetcoin-runtime-common", path = "../common", default-features = false }
primitives = { package = "tetcoin-primitives", path = "../../primitives", default-features = false }
tetcoin-parachain = { version = "0.8.28", path = "../../parachain", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"
libsecp256k1 = "0.3.5"
tiny-keccak = "2.0.2"
keyring = { package = "tp-keyring", git = "https://github.com/tetcoin/tetcore", branch = "master" }
tp-trie = { version = "2.0.2" }
serde_json = "1.0.61"

[build-dependencies]
wasm-builder = "3.0.0"

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"noble-authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"tetsy-scale-codec/std",
	"inherents/std",
	"tet-core/std",
	"tetcoin-parachain/std",
	"tp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"tetcore-std/std",
	"tet-io/std",
	"fabric-support/std",
	"noble-authorship/std",
	"noble-balances/std",
	"noble-transaction-payment/std",
	"noble-transaction-payment-rpc-runtime-api/std",
	"noble-collective/std",
	"noble-elections-phragmen/std",
	"noble-democracy/std",
	"fabric-executive/std",
	"noble-grandpa/std",
	"noble-identity/std",
	"noble-im-online/std",
	"noble-indices/std",
	"noble-membership/std",
	"noble-multisig/std",
	"noble-nicks/std",
	"noble-offences/std",
	"noble-proxy/std",
	"noble-recovery/std",
	"tp-runtime/std",
	"tp-staking/std",
	"noble-scheduler/std",
	"noble-session/std",
	"noble-society/std",
	"noble-staking/std",
	"noble-sudo/std",
	"fabric-system/std",
	"fabric-system-rpc-runtime-api/std",
	"noble-timestamp/std",
	"noble-treasury/std",
	"tp-version/std",
	"noble-utility/std",
	"noble-vesting/std",
	"serde_derive",
	"serde/std",
	"log",
	"noble-babe/std",
	"babe-primitives/std",
	"tp-session/std",
	"noble-randomness-collective-flip/std",
	"runtime-common/std",
]
runtime-benchmarks = [
	"runtime-common/runtime-benchmarks",
	"fabric-benchmarking",
	"fabric-support/runtime-benchmarks",
	"fabric-system/runtime-benchmarks",
	"tp-runtime/runtime-benchmarks",
	"noble-babe/runtime-benchmarks",
	"noble-balances/runtime-benchmarks",
	"noble-collective/runtime-benchmarks",
	"noble-democracy/runtime-benchmarks",
	"noble-elections-phragmen/runtime-benchmarks",
	"noble-grandpa/runtime-benchmarks",
	"noble-identity/runtime-benchmarks",
	"noble-im-online/runtime-benchmarks",
	"noble-indices/runtime-benchmarks",
	"noble-multisig/runtime-benchmarks",
	"noble-proxy/runtime-benchmarks",
	"noble-scheduler/runtime-benchmarks",
	"noble-society/runtime-benchmarks",
	"noble-staking/runtime-benchmarks",
	"noble-timestamp/runtime-benchmarks",
	"noble-treasury/runtime-benchmarks",
	"noble-utility/runtime-benchmarks",
	"noble-vesting/runtime-benchmarks",
	"noble-offences-benchmarking",
	"noble-session-benchmarking",
	"fabric-system-benchmarking",
	"hex-literal",
]

# When enabled, the runtime api will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime api exported functions
# in WASM.
disable-runtime-api = []
