[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "xcm-builder"
description = "Tools & types for building with XCM and its executor."
version = "0.8.22"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }
tetcore-std = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-arithmetic = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-io = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-runtime = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
fabric-support = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }

# Tetcoin dependencies
tetcoin-parachain = { path = "../../parachain", default-features = false }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"xcm/std",
	"xcm-executor/std",
	"tetcore-std/std",
	"tp-arithmetic/std",
	"tp-io/std",
	"tp-runtime/std",
	"fabric-support/std",
	"tetcoin-parachain/std",
]
