[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "xcm-builder"
description = "Tools & types for building with XCM and its executor."
version = "0.8.22"

[dependencies]
tetsy-scale-codec = { version = "2.0.1", default-features = false, features = ["derive"] }
xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }
tetcore-std = { version = "2.0.2", default-features = false }
arithmetic = { version = "2.0.2", default-features = false }
tet-io = { version = "2.0.2", default-features = false }
tp-runtime = { version = "2.0.2", default-features = false }
fabric-support = { version = "2.0.0", default-features = false }

# Tetcoin dependencies
tetcoin-parachain = { version = "0.8.28", path = "../../parachain", default-features = false }

[features]
default = ["std"]
std = [
	"tetsy-scale-codec/std",
	"xcm/std",
	"xcm-executor/std",
	"tetcore-std/std",
	"arithmetic/std",
	"tet-io/std",
	"tp-runtime/std",
	"fabric-support/std",
	"tetcoin-parachain/std",
]
