[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "xcm-executor"
description = "An abstract and configurable XCM message executor."
version = "0.8.22"

[dependencies]
impl-trait-for-tuples = "0.2.0"
tetsy-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
xcm = { path = "..", default-features = false }
tetcore-std = { version = "2.0.2", default-features = false }
tet-io = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
arithmetic = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tet-core = { version = "2.0.2", default-features = false }
tp-runtime = { version = "2.0.2", default-features = false }
fabric-support = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"tetsy-scale-codec/std",
	"xcm/std",
	"tetcore-std/std",
	"tet-io/std",
	"arithmetic/std",
	"tet-core/std",
	"tp-runtime/std",
	"fabric-support/std",
]
