[package]
name = "tetcoin-node-core-approval-voting"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.8"
tetsy-scale-codec = { version = "2.0.0", default-features = false, features = ["bit-vec", "derive"] }

tetcoin-subsystem = { package = "tetcoin-node-subsystem", path = "../../subsystem" }
tetcoin-overseer = { path = "../../overseer" }
tetcoin-primitives = { version = "0.8.28", path = "../../../primitives" }
tetcoin-node-primitives = { path = "../../primitives" }
bitvec = "0.20.1"

tc-client-api = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-consensus-slots = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-blockchain = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }

[dev-dependencies]