[package]
name = "tetcoin-node-core-approval-voting"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.8"
tetsy-scale-codec = { version = "2.0.1", default-features = false, features = ["bit-vec", "derive"] }

tetcoin-subsystem = { package = "tetcoin-node-subsystem", path = "../../subsystem" }
tetcoin-overseer = { path = "../../overseer" }
tetcoin-primitives = { version = "0.8.28", path = "../../../primitives" }
tetcoin-node-primitives = { version = "0.1.0", path = "../../primitives" }
bitvec = "0.22.3"

tc-client-api = { version = "2.0.0", default-features = false }
tp-consensus-slots = { version = "0.8.2", default-features = false }
tp-blockchain = { version = "2.0.2", default-features = false }

[dev-dependencies]