[package]
name = "tetcoin-node-core-av-store"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
futures-timer = "3.0.2"
tetsy-kvdb = "0.9.0"
tetsy-kvdb-rocksdb = "0.11.0"
thiserror = "1.0.23"
tracing = "0.1.22"
# tracing-futures = "0.2.4"
bitvec = "0.22.3"

tetsy-scale-codec = { version = "2.0.1", features = ["derive"] }
erasure = { version = "0.8.28", package = "tetcoin-erasure-coding", path = "../../../erasure-coding" }
tetcoin-subsystem = { package = "tetcoin-node-subsystem", path = "../../subsystem" }
tetcoin-node-subsystem-util = { path = "../../subsystem-util" }
tetcoin-overseer = { path = "../../overseer" }
tetcoin-primitives = { version = "0.8.28", path = "../../../primitives" }

tc-service = { version = "0.8.0", default-features = false }

[dev-dependencies]
log = "0.4.13"
env_logger = "0.8.2"
assert_matches = "1.4.0"
tetsy-kvdb-memorydb = "0.9.0"

tet-core = "2.0.2"
tetcoin-node-subsystem-util = { path = "../../subsystem-util" }
tetcoin-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
tp-keyring = { version = "2.0.2" }
parking_lot = "0.11.1"
