[package]
name = "tetcoin-node-core-backing"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
tp-keystore = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tetcoin-primitives = { path = "../../../primitives" }
tetcoin-node-primitives = { path = "../../primitives" }
tetcoin-subsystem = { package = "tetcoin-node-subsystem", path = "../../subsystem" }
tetcoin-node-subsystem-util = { path = "../../subsystem-util" }
erasure-coding = { package = "tetcoin-erasure-coding", path = "../../../erasure-coding" }
statement-table = { package = "tetcoin-statement-table", path = "../../../statement-table" }
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
tracing = "0.1.22"
tracing-futures = "0.2.4"
thiserror = "1.0.23"

[dev-dependencies]
tet-core = "2.0.2"
tet-application-crypto = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tp-keyring = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tc-keystore = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
futures = { version = "0.3.12", features = ["thread-pool"] }
assert_matches = "1.4.0"
tetcoin-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
