[package]
name = "tetcoin-node-core-backing"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
tp-keystore = { version = "0.8.1" }
tetcoin-primitives = { version = "0.8.28", path = "../../../primitives" }
tetcoin-node-primitives = { version = "0.1.0", path = "../../primitives" }
tetcoin-subsystem = { package = "tetcoin-node-subsystem", path = "../../subsystem" }
tetcoin-node-subsystem-util = { path = "../../subsystem-util" }
erasure-coding = { version = "0.8.28", package = "tetcoin-erasure-coding", path = "../../../erasure-coding" }
statement-table = { package = "tetcoin-statement-table", path = "../../../statement-table" }
bitvec = { version = "0.22.3", default-features = false, features = ["alloc"] }
tracing = "0.1.22"
# tracing-futures = "0.2.4"
thiserror = "1.0.23"

[dev-dependencies]
tet-core = "2.0.2"
tet-application-crypto = { version = "2.0.2" }
tp-keyring = { version = "2.0.2" }
tc-keystore = { version = "2.0.0" }
futures = { version = "0.3.12", features = ["thread-pool"] }
assert_matches = "1.4.0"
tetcoin-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
